Added dependency on commons-codec for Android support.
- See #4.